@@ -464,16 +464,17 @@ The imperative verb prefix when {ghaH:n:nolink} is the object is {yI-:v:pref}.</
     <table name="mem">
       <column name="_id">14585</column>
       <column name="entry_name">ghay</column>
-      <column name="part_of_speech">v:hyp</column>
-      <column name="definition">spray, bombard, rain down?</column>
+      <column name="part_of_speech">v:t_c</column>
+      <column name="definition">spray, bombard, rain down</column>
       <column name="definition_de">sprühen</column>
       <column name="synonyms"></column>
       <column name="antonyms"></column>
       <column name="see_also">{SIS:v}</column>
-      <column name="notes">This word is not known only through {bIQ ghaywI' pa':n} and the example below from {Klingon Monopoly:src}.</column>
-      <column name="hidden_notes"></column>
+      <column name="notes"></column>
+      <column name="hidden_notes">An English definition has never been given for this word. Its meaning is inferred from the examples of its usage.</column>
       <column name="components"></column>
       <column name="examples">
+▶ {bIQ ghaywI' pa':n}
 ▶ {jorwI'mey ghaymo' qarDaSnganpu', Hegh SuvwI'pu'lI' law' 'ej rIQ SuvwI'pu'lI' law'.:sen:nolink} "Suffer major losses after Cardassian bombing campaign."[2]</column>
       <column name="search_tags"></column>
       <column name="source">[1] {TNK:src}, [2] {Klingon Monopoly:src}</column>
